--- a/python_training/data_manipulation_in_pandas.ipynb
+++ b/python_training/data_manipulation_in_pandas.ipynb
@@ -6,22 +6,6 @@
     "collapsed": true
    },
    "source": [
-    "<span>\n",
-    "<img src=\"http://www.sobigdata.eu/sites/default/files/logo-SoBigData-DEFINITIVO.png\" width=\"180px\" align=\"right\"/>\n",
-    "</span>\n",
-    "<span>\n",
-    "<b>Author:</b> <a href=\"http://about.giuliorossetti.net\">Giulio Rossetti</a><br/>\n",
-    "<b>Python version:</b>  3.x<br/>\n",
-    "<b>Last update:</b> 22/01/2018\n",
-    "</span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
     "<a id='top'></a>\n",
     "# *Data Manipulation with Pandas*\n",
     "This notebook contains an overview of basic Pandas functionalities.\n",
@@ -1428,6 +1412,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
