fix path folder

--- a/match_events/match_events.ipynb
+++ b/match_events/match_events.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -75,14 +73,13 @@
    },
    "outputs": [],
    "source": [
-    "matches = json.load(open('match.json'))"
+    "matches = json.load(open('example_match/match.json'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -406,9 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -422,16 +417,14 @@
     }
    ],
    "source": [
-    "all_events = json.load(open('match_event.json'))\n",
+    "all_events = json.load(open('example_match/match_event.json'))\n",
     "len(all_events)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -470,9 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -679,9 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5891,7 +5880,6 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -6008,9 +5996,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -6101,9 +6087,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -6218,9 +6202,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -6324,9 +6306,9 @@
   "anaconda-cloud": {},
   "hide_input": false,
   "kernelspec": {
-   "display_name": "p36workshop",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "p36workshop"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
